tests/paczka1/small_fuzzy/86834441.err
Error in line 2: lypu A570 24,7
Error in line 3: lypu A240 81,9
Error in line 6: lypu S952 37,2
